@@ -1,4 +1,5 @@
 0.33
+ - Remove all other characters than number from series ordinal.
  - Use NKP Kramerius as Czech Digital Library.
 
 0.32 2025-10-21T13:17:51+02:00
